--- a/ConfigurationFile.json
+++ b/ConfigurationFile.json
@@ -1,23 +1,27 @@
 [
-	{
-		'Title': 'Front',
-		'Enable': 'true',
-		'SourcePath': 'C:\\ConspiracaoCopy\\TESTE\\Pasta1',
-		'DestinationPath': 'C:\\ConspiracaoCopy\\TESTE\\Pasta2',
-		'Ignore': {
-			'Folders': [
-				'folder1',	'folder2',	'folder3', 'Inside'
-			],
-			'Files': [
-				'folder4/abc.txt',	'folder4/xzd.dll'
-			]
-		},
-		'Backup': {
-			'Enable': 'true',
-			'SourcePath': 'C:\\ConspiracaoCopy\\TESTE\\Pasta1',
-			'MoveToPath': 'C:\\ConspiracaoCopy\\TESTE'
-		}
-	},
+  {
+    "Title": "Front",
+    "Enable": "true",
+    "SourcePath": "C:\\\\\\CopyBackup_Tool\\\\TESTE\\\\Pasta1",
+    "DestinationPath": "C:\\CopyBackup_Tool\\TESTE\\Pasta2",
+    "Ignore": {
+      "Folders": [
+        "folder1",
+        "folder2",
+        "folder3",
+        "Inside"
+      ],
+      "Files": [
+        "folder4/abc.txt",
+        "folder4/xzd.dll"
+      ]
+    },
+    "Backup": {
+      "Enable": "true",
+      "SourcePath": "C:\\CopyBackup_Tool\\TESTE\\Pasta1",
+      "MoveToPath": "C:\\CopyBackup_Tool\\TESTE"
+    }
+  },
 	{
 		'Title': 'Back',
 		'Enable': 'false',
@@ -33,8 +37,8 @@
 		},
 		'Backup': {
 			'Enable': 'true',
-			'SourcePath': 'C:\\ConspiracaoCopy\\TESTE\\Pasta1',
-			'MoveToPath': 'C:\\ConspiracaoCopy\\TESTE\\Pasta2'
+			'SourcePath': 'C:\\CopyBackup_Tool\\TESTE\\Pasta1',
+			'MoveToPath': 'C:\\CopyBackup_Tool\\TESTE\\Pasta2'
 		}
 	}
 ]
