--- a/ConfigurationFile.json
+++ b/ConfigurationFile.json
@@ -22,23 +22,27 @@
       "MoveToPath": "C:\\CopyBackup_Tool\\TESTE"
     }
   },
-	{
-		'Title': 'Back',
-		'Enable': 'false',
-		'SourcePath': '',
-		'DestinationPath': '',
-		'Ignore': {
-			'Folders': [
-				'folder1',	'folder2',	'folder3'
-			],
-			'Files': [
-				'folder4/abc.txt',	'folder4/xzd.dll'
-			]
-		},
-		'Backup': {
-			'Enable': 'true',
-			'SourcePath': 'C:\\CopyBackup_Tool\\TESTE\\Pasta1',
-			'MoveToPath': 'C:\\CopyBackup_Tool\\TESTE\\Pasta2'
-		}
-	}
+  {
+    "Title": "Back",
+    "Enable": "false",
+    "SourcePath": "C:\\\\\\CopyBackup_Tool\\\\TESTE\\\\Pasta1",
+    "DestinationPath": "C:\\CopyBackup_Tool\\TESTE\\Pasta2",
+    "Ignore": {
+      "Folders": [
+        "folder1",
+        "folder2",
+        "folder3",
+        "Inside"
+      ],
+      "Files": [
+        "folder4/abc.txt",
+        "folder4/xzd.dll"
+      ]
+    },
+    "Backup": {
+      "Enable": "true",
+      "SourcePath": "C:\\CopyBackup_Tool\\TESTE\\Pasta1",
+      "MoveToPath": "C:\\CopyBackup_Tool\\TESTE"
+    }
+  },
 ]
