--- a/CopyBackup_Tool.csproj
+++ b/CopyBackup_Tool.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="TESTE\Pasta1\Inside - Copia\" />
+    <Folder Include="TESTE\Pasta1\Another\" />
     <Folder Include="TESTE\Pasta1\Inside\" />
     <Folder Include="TESTE\Pasta2\" />
   </ItemGroup>
