--- a/ConfigurationFile.json
+++ b/ConfigurationFile.json
@@ -2,7 +2,7 @@
   {
     "Title": "Front",
     "Enable": "true",
-    "SourcePath": "C:\\\\\\CopyBackup_Tool\\\\TESTE\\\\Pasta1",
+    "SourcePath": "C:\\CopyBackup_Tool\\TESTE\\Pasta1",
     "DestinationPath": "C:\\CopyBackup_Tool\\TESTE\\Pasta2",
     "Ignore": {
       "Folders": [
@@ -18,6 +18,7 @@
     },
     "Backup": {
       "Enable": "true",
+      "ZipFileName":  "Front",
       "SourcePath": "C:\\CopyBackup_Tool\\TESTE\\Pasta1",
       "MoveToPath": "C:\\CopyBackup_Tool\\TESTE"
     }
@@ -25,7 +26,7 @@
   {
     "Title": "Back",
     "Enable": "false",
-    "SourcePath": "C:\\\\\\CopyBackup_Tool\\\\TESTE\\\\Pasta1",
+    "SourcePath": "C:\\CopyBackup_Tool\\TESTE\\Pasta1",
     "DestinationPath": "C:\\CopyBackup_Tool\\TESTE\\Pasta2",
     "Ignore": {
       "Folders": [
@@ -41,6 +42,7 @@
     },
     "Backup": {
       "Enable": "true",
+      "ZipFileName": "Back",
       "SourcePath": "C:\\CopyBackup_Tool\\TESTE\\Pasta1",
       "MoveToPath": "C:\\CopyBackup_Tool\\TESTE"
     }
